환불정책 추가

--- a/main/templates/class/class_detail.html
+++ b/main/templates/class/class_detail.html
@@ -65,6 +65,7 @@
                 <div class="fixedArea">
                     <div class="info_area">
                         <span>INFO</span>
+                         <a class="btn buy" href="#">위로</a>
                         <div class="lecture_info">
                             <ul>
                                 <li>
