--- a/main/templates/common/footer.html
+++ b/main/templates/common/footer.html
@@ -45,6 +45,10 @@
                             <p>경기도 수원시 영통구 영통로 200번길 20</p>
                         </li>
                         <li>
+                            <span>교환반품 주소</span>
+                            <p>서울시 양천구 국회대로 12 강성빌딩 4층</p>
+                        </li>
+                        <li>
                             <span>escrow</span>
                              <form name="KB_AUTHMARK_FORM" method="get">
                                 <input type="hidden" name="page" value="B009111"/>
@@ -62,7 +66,7 @@
                     <ul>
                         <li>
                             <span>TEL</span>
-                            <p>070-7867-8866</p>
+                            <p>070-7867-8866(유선상담 없음)</p>
                         </li>
                         <li>
                             <span>E-Mail</span>
