--- a/main/templates/myclass/myclass_list.html
+++ b/main/templates/myclass/myclass_list.html
@@ -47,7 +47,21 @@
             </ul>
         </div>
 
-        {% include "common/banner_bottom.html" %}
+        {% if count == 0 %}
+            <div class="banner bottom" style="margin-top:-10px;">
+                <img class="bg left01" src="{% static 'resource/img/sub/bg_botBanner_left01.png' %}" alt="bg01">
+                <img class="bg left02" src="{% static 'resource/img/sub/bg_botBanner_left02.png' %}" alt="bg02">
+                <img class="bg right" src="{% static 'resource/img/sub/bg_botBanner_right.png' %}" alt="bg03">
+                <span>
+                    코딩 키트 구매 후, 이용 가능합니다 <br/>
+                    코딩 키트를 구매하면, 강의가 무료!
+
+                </span>
+                <a href="/class/" class="btn">둘러보기</a>
+            </div>
+        {% else %}
+            {% include "common/banner_bottom.html" %}
+        {% endif %}
         {% include "common/footer.html" %}
 
     <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/stove99/jquery-modal-sample@v1.4/css/animate.min.css" />
