상세페이지 변경

--- a/main/templates/product/trashcan.html
+++ b/main/templates/product/trashcan.html
@@ -1,5 +1,5 @@
  {% load static %}
-    <div class="info_detail">
+    <div >
         <span class="title">런코딩 코딩 키트 첫번째 프로젝트, "스마트 휴지통"을 소개합니다.&nbsp;&nbsp; </span>
         <img src="{% static 'resource/img/Trashcan/info_trashcan_1.jpg' %}" style="padding-top:10px; padding-bottom:10px" alt="상품상세 이미지">
         <img src="{% static 'resource/img/Trashcan/info_trashcan_2.jpg' %}" alt="상품상세 이미지">
