--- a/main/templates/product/arduino_trashcan.html
+++ b/main/templates/product/arduino_trashcan.html
@@ -1,49 +1,118 @@
  {% load static %}
- {% include "product/trashcan.html" %}
+
+
+    <div class="prd_title"><strong>스마트 휴지통</strong></div>
+
     <div class="info_detail">
-        <span class="sub_title">아두이노 코딩 + AI(인공지능) 코딩&nbsp;&nbsp; </span>
-        <img src="{% static 'resource/img/Trashcan/arduino/info_trashcan_arduino_1.jpg' %}" style="padding-top:10px; padding-bottom:10px" alt="상품상세 이미지">
+       <div class="prd_title_sub" style="padding-top:-10px;">
+            <div class="content_sub">코딩키트</div>
+            <img src="{% static 'resource/img/sub/detail_set.png' %}" alt="set" class="content_sub" style="padding-top:3px;">
+            <div class="content_sub">아두이노</div>
+            <img src="{% static 'resource/img/sub/detail_set.png' %}" alt="set" class="content_sub" style="padding-top:3px;">
+            <div class="content_sub">스마트 휴지통 상세보기</div>
+        </div>
 
-        <ul>
-            <li> <span class="content">아두이노 코딩 개념, 원리 핵심 온라인 강의를 통해 실전 프로그래밍을 쉽게 배울 수 있어요.</span></li>
-        </ul>
+        <img src="{{prd_detail.img}}" alt="상품상세 이미지" style="padding-top:80px; padding-bottom:80px;">
 
-        <img src="{% static 'resource/img/Trashcan/arduino/info_trashcan_arduino_2.jpg' %}" style="padding-top:100px; " alt="상품상세 이미지">
-        <img src="{% static 'resource/img/Trashcan/arduino/info_trashcan_arduino_3.jpg' %}" style="padding-top:10px; " alt="상품상세 이미지">
-        <img src="{% static 'resource/img/Trashcan/arduino/info_trashcan_arduino_4.jpg' %}" style="padding-top:10px; " alt="상품상세 이미지">
+        <div class="point_content">Outline</div>
+        <div class="content_gray">
+            <span>서보모터 / 초음파센서 / 러닝캠을 이용한 코딩 키트!</span><br/>
+            <span>강의를 하나씩 진행하면서 프로그래밍 문법을 익히고, 부품을 이용하여 만들어 나가는 스마트 휴지통 입니다.</span><br/><br/>
+            <span>1. 초음파 센서를 이용한 가까이 다가가면 뚜껑이 열리는 버전</span><br/>
+            <span>2. 인공지능 프로그램 러닝봇을 이용하여 캔,우유,페트를 인식하여 분리수거함을 만드는 버전</span><br/><br/>
+            <span>쉽고 재미있게! 기초부터 응용까지! 상상을 현실로 만드는 뚝딱 코딩키트를 만나보세요.</span><br/>
+        </div>
 
-        <ul>
-            <li> <span class="content">단순히 똑같이 작동하는 모습을 만들어 보는데서 그치는 것이 아니라</span></li>
-            <li> <span class="point_content">중요한 부분에 대해서는 미션을 통해 스스로 생각할 수 있는 힘을 길러줍니다.</span></li>
-            <li> <span class="content">런코딩 온라인 강의 후에는</span></li>
-            <li> <span class="content">원하는 모습을 직접 만들어 보는 MAKER 가 될 수 있을거에요.</span></li>
-        </ul>
+        <div class="point_content" style="padding-top:80px;">Curriculum</div>
 
-        <img src="{% static 'resource/img/Trashcan/arduino/info_trashcan_arduino_5.jpg' %}" style="padding-top:100px; " alt="상품상세 이미지">
-        <img src="{% static 'resource/img/Trashcan/arduino/info_trashcan_arduino_6.jpg' %}" style="padding-top:10px; " alt="상품상세 이미지">
+        <div class="content"><strong>part1. 환경구축 </strong></div>
+        <div style="padding-bottom:20px;"></div>
+        <div class="content_curriculum">
+            <li>
+                 <div style="width:100%"><b>1. </b>아두이노 설치
+                     <div style="float:right;">3:54</div>
+                 </div>
+            </li>
+            <li>
+                 <div style="width:100%"><b>2. </b>러닝봇(인공지능 프로그램) 설치
+                     <div style="float:right;">6:35</div>
+                 </div>
+            </li>
+        </div>
 
-        <ul>
-            <li> <span class="content">러닝캠 (카메라센서) - 러닝캠 - 러닝봇 (인공지능 프로그램)   연결 및 결과 분석 모습입니다.</span></li>
-        </ul>
-        <ul>
-            <li> <span class="content">코딩 학습 교구에서는 잘 볼 수 없는 AI(인공지능) 코딩</span></li>
-            <li> <span class="content">아무래도 AI 코딩 경우 프로그래밍 중에서도 고난이도 분야이며 그에 따른 전문가가 많지 않은 편입니다.</span></li>
-        </ul>
-        <ul>
-            <li> <span class="content">그러다보니 아이들 학습으로는 다소 접근하기 어려웠던 AI(인공지능) 코딩, </span></li>
-            <li> <span class="content">런코딩 개발자는 현 AI(인공지능) 개발 파트에서 근무 중인 현직 프로그래머로서</span></li>
-        </ul>
-         <ul>
-            <li> <span class="content">보다 쉽고, 정확하게 인공지능 코딩 학습을 위해</span></li>
-            <li> <span class="point_content">코딩 교구에서는 만나보기 힘든 "러닝봇" 인공지능 프로그램을 자체 개발 + 디자인 키트에 도입하였습니다.</span></li>
-        </ul>
-         <ul>
-            <li> <span class="content">온라인 강의와 러닝봇 AI 프로그램을 통해 아이들이 직접 컴퓨터를 교육시키고, 이를 아두이노 보드와 </span></li>
-            <li> <span class="content">연결해보는 흥미로운 코딩 키트를 만나보세요.</span></li>
-        </ul>
+        <div class="content"><strong>part2. 익히기 </strong></div>
+        <div style="padding-bottom:20px;"></div>
+        <div class="content_curriculum">
+            <li>
+                 <div style="width:100%"><b>1. </b>변수
+                     <div style="float:right;">7:48</div>
+                 </div>
+            </li>
+            <li>
+                 <div style="width:100%"><b>2. </b>연산자 기초
+                     <div style="float:right;">9:08</div>
+                 </div>
+            </li>
+            <li>
+                 <div style="width:100%"><b>3. </b>함수
+                     <div style="float:right;">6:35</div>
+                 </div>
+            </li>
+             <li>
+                 <div style="width:100%"><b>4. </b>조건문 if
+                     <div style="float:right;">6:35</div>
+                 </div>
+            </li>
+            <li>
+                 <div style="width:100%"><b>5. </b>인공지능 이란?
+                     <div style="float:right;">6:35</div>
+                 </div>
+            </li>
+        </div>
 
-        <img src="{% static 'resource/img/Trashcan/arduino/info_trashcan_arduino_7.jpg' %}" style="padding-top:100px; " alt="상품상세 이미지">
-        <img src="{% static 'resource/img/Trashcan/arduino/info_trashcan_arduino_8.jpg' %}" style="padding-top:10px; " alt="상품상세 이미지">
+        <div class="content"><strong>part3. 다루기</strong></div>
+        <div style="padding-bottom:20px;"></div>
+        <div class="content_curriculum">
+            <li>
+                 <div style="width:100%"><b>1. </b>시리얼모니터
+                     <div style="float:right;">7:48</div>
+                 </div>
+            </li>
+            <li>
+                 <div style="width:100%"><b>2. </b>초음파센서
+                     <div style="float:right;">9:08</div>
+                 </div>
+            </li>
+            <li>
+                 <div style="width:100%"><b>3. </b>서보모터
+                     <div style="float:right;">6:35</div>
+                 </div>
+            </li>
+        </div>
+
+        <div class="content"><strong>part4. 키트 만들기 </strong></div>
+        <div style="padding-bottom:20px;"></div>
+        <div class="content_curriculum">
+            <li>
+                 <div style="width:100%"><b>1. </b>스마트 휴지통 키트 만들기
+                     <div style="float:right;">7:48</div>
+                 </div>
+            </li>
+            <li>
+                 <div style="width:100%"><b>2. </b>인공지능 휴지통 키트 만들기
+                     <div style="float:right;">9:08</div>
+                 </div>
+            </li>
+            <li>
+                 <div style="width:100%"><b>3. </b>나만의 인공지능 만들기
+                     <div style="float:right;">6:35</div>
+                 </div>
+            </li>
+        </div>
+
+         <div class="point_content" style="padding-top:80px;">Detail</div>
+         {% include "product/trashcan.html" %}
+
     </div>
 
   {% include "product/common.html" %}
