--- a/main/templates/product/mblock_trashcan.html
+++ b/main/templates/product/mblock_trashcan.html
@@ -1,54 +1,113 @@
  {% load static %}
- {% include "product/trashcan.html" %}
+
+    <div class="prd_title"><strong>스마트 휴지통</strong></div>
+
     <div class="info_detail">
-        <span class="sub_title">블럭 코딩 with mblock (엠블럭) + 아두이노 보드 + AI(인공지능) 코딩&nbsp;&nbsp; </span>
-        <img src="{% static 'resource/img/Trashcan/mblock/info_trashcan_mblock_1.jpg' %}" style="padding-top:10px; padding-bottom:10px" alt="상품상세 이미지">
+       <div class="prd_title_sub" style="padding-top:-10px;">
+            <div class="content_sub">코딩키트</div>
+            <img src="{% static 'resource/img/sub/detail_set.png' %}" alt="set" class="content_sub" style="padding-top:3px;">
+            <div class="content_sub">엠블럭</div>
+            <img src="{% static 'resource/img/sub/detail_set.png' %}" alt="set" class="content_sub" style="padding-top:3px;">
+            <div class="content_sub">스마트 휴지통 상세보기</div>
+        </div>
 
-        <ul>
-            <li> <span class="content">엠블럭(mblock) 실행 예시 - 한글로 표기되어 쉽게 접할 수 있어요.</span></li>
-        </ul>
+        <img src="{{prd_detail.img}}" alt="상품상세 이미지" style="padding-top:80px; padding-bottom:80px;">
 
-        <img src="{% static 'resource/img/Trashcan/mblock/info_trashcan_mblock_2.jpg' %}" style="padding-top:100px; " alt="상품상세 이미지">
+        <div class="point_content">Outline</div>
+        <div class="content_gray">
+            <span>서보모터 / 초음파센서 / 러닝캠을 이용한 코딩 키트!</span><br/>
+            <span>강의를 하나씩 진행하면서 프로그래밍 문법을 익히고, 부품을 이용하여 만들어 나가는 스마트 휴지통 입니다.</span><br/><br/>
+            <span>1. 초음파 센서를 이용한 가까이 다가가면 뚜껑이 열리는 버전</span><br/>
+            <span>2. 인공지능 프로그램 러닝봇을 이용하여 캔,우유,페트를 인식하여 분리수거함을 만드는 버전</span><br/><br/>
+            <span>쉽고 재미있게! 기초부터 응용까지! 상상을 현실로 만드는 뚝딱 코딩키트를 만나보세요.</span><br/>
+            <span>프로그래밍이 처음이라면 엠블럭으로 <strong>블럭코딩</strong> 해보세요~</span><br/>
+        </div>
 
-        <ul>
-            <li> <span class="content">엠블럭 (블럭코딩) -  아두이노 보드와 연결해 만들어보는 코딩 키트입니다.</span></li>
-            <li> <span class="content">(온라인 강의 예제 입니다. 강의에 필요한 아두이노 보드를 포함 필요한 교구 부품은</span></li>
-            <li> <span class="content">택배로 보내드리는 디자인 키트에 포함되어 있습니다.</span></li>
-        </ul>
+        <div class="point_content" style="padding-top:80px;">Curriculum</div>
 
-        <ul>
-            <li> <span class="content">프로그래밍 언어의 개념이 생소한 코딩 베이비들 경우</span></li>
-            <li> <span class="point_content">"스크래치"와 같은 블럭코딩을 통해 코딩개념을 익힐 수 있어요.</span></li>
-            <li> <span class="content">하지만 스크래치 언어는 아두이노 보드와 호환이 되지 않아서 내 손으로 뚝딱 만들어보는데 한계가 있어요.</span></li>
-            <li> <span class="content">런코딩은 mblock을 이용한 블럭코딩으로 아두이노를 동작시키고, 뚝딱 만들어볼 수 있는 강의를 구성하였습니다.</span></li>
-        </ul>
+        <div class="content"><strong>part1. 환경구축 </strong></div>
+        <div style="padding-bottom:20px;"></div>
+        <div class="content_curriculum">
+            <li>
+                 <div style="width:100%"><b>1. </b>엠블럭 설치
+                     <div style="float:right;">3:54</div>
+                 </div>
+            </li>
+            <li>
+                 <div style="width:100%"><b>2. </b>러닝봇(인공지능 프로그램) 설치
+                     <div style="float:right;">6:35</div>
+                 </div>
+            </li>
+        </div>
 
-        <img src="{% static 'resource/img/Trashcan/mblock/info_trashcan_mblock_3.jpg' %}" style="padding-top:100px; " alt="상품상세 이미지">
-        <img src="{% static 'resource/img/Trashcan/mblock/info_trashcan_mblock_4.jpg' %}" style="padding-top:10px; " alt="상품상세 이미지">
-        <img src="{% static 'resource/img/Trashcan/mblock/info_trashcan_mblock_5.jpg' %}" style="padding-top:10px; " alt="상품상세 이미지">
+        <div class="content"><strong>part2. 익히기 </strong></div>
+        <div style="padding-bottom:20px;"></div>
+        <div class="content_curriculum">
+            <li>
+                 <div style="width:100%"><b>1. </b>엠블럭 기초사용법
+                     <div style="float:right;">7:48</div>
+                 </div>
+            </li>
+            <li>
+                 <div style="width:100%"><b>2. </b>아두이노 연동하기
+                     <div style="float:right;">9:08</div>
+                 </div>
+            </li>
+            <li>
+                 <div style="width:100%"><b>3. </b>연산자 기초
+                     <div style="float:right;">6:35</div>
+                 </div>
+            </li>
+             <li>
+                 <div style="width:100%"><b>4. </b>조건문, 반복문
+                     <div style="float:right;">6:35</div>
+                 </div>
+            </li>
+            <li>
+                 <div style="width:100%"><b>5. </b>인공지능 이란?
+                     <div style="float:right;">6:35</div>
+                 </div>
+            </li>
+        </div>
 
-        <ul>
-            <li> <span class="content">엠블럭(블럭코딩)을 통한 러닝봇 (런코딩 자체 개발 인공지능 프로그램) 연결 및 분석 모습입니다.</span></li>
+        <div class="content"><strong>part3. 다루기</strong></div>
+        <div style="padding-bottom:20px;"></div>
+        <div class="content_curriculum">
+            <li>
+                 <div style="width:100%"><b>1. </b>서보모터
+                     <div style="float:right;">7:48</div>
+                 </div>
+            </li>
+            <li>
+                 <div style="width:100%"><b>2. </b>초음파센서
+                     <div style="float:right;">9:08</div>
+                 </div>
+            </li>
+        </div>
 
-            <br/>
-            <li> <span class="content">코딩 학습 교구에서는 잘 볼 수 없는 AI(인공지능) 코딩,</span></li>
-            <li> <span class="content">아무래도 AI 코딩 경우 프로그래밍 중에서도 고난이도 분야이며 그에 따른 전문가가 많지 않은 편입니다.</span></li>
+        <div class="content"><strong>part4. 키트 만들기 </strong></div>
+        <div style="padding-bottom:20px;"></div>
+        <div class="content_curriculum">
+            <li>
+                 <div style="width:100%"><b>1. </b>스마트 휴지통 키트 만들기
+                     <div style="float:right;">7:48</div>
+                 </div>
+            </li>
+            <li>
+                 <div style="width:100%"><b>2. </b>인공지능 휴지통 키트 만들기
+                     <div style="float:right;">9:08</div>
+                 </div>
+            </li>
+            <li>
+                 <div style="width:100%"><b>3. </b>나만의 인공지능 만들기
+                     <div style="float:right;">6:35</div>
+                 </div>
+            </li>
+        </div>
 
-            <br/>
-            <li> <span class="content">그러다보니 아이들 학습으로는 다소 접근하기 어려웠던 AI(인공지능) 코딩, </span></li>
-            <li> <span class="content">런코딩 개발자는 현 AI(인공지능) 개발 파트에서 근무 중인 현직 프로그래머로서</span></li>
+         <div class="point_content" style="padding-top:80px;">Detail</div>
+         {% include "product/trashcan.html" %}
 
-            <br/>
-            <li> <span class="content">보다 쉽고, 정확하게 인공지능 코딩 학습을 위해</span></li>
-            <li> <span class="point_content">코딩 교구에서는 만나보기 힘든 "러닝봇" 인공지능 프로그램을 자체 개발 + 디자인 키트에 도입하였습니다.</span></li>
-
-            <br/>
-            <li> <span class="content">온라인 강의와 러닝봇 AI 프로그램을 통해 아이들이 직접 컴퓨터를 교육시키고, 이를 아두이노 보드와 </span></li>
-            <li> <span class="content">연결해보는 흥미로운 코딩 키트를 만나보세요.</span></li>
-        </ul>
-
-        <img src="{% static 'resource/img/Trashcan/mblock/info_trashcan_mblock_6.jpg' %}" style="padding-top:100px; " alt="상품상세 이미지">
-        <img src="{% static 'resource/img/Trashcan/mblock/info_trashcan_mblock_7.jpg' %}" style="padding-top:10px; " alt="상품상세 이미지">
     </div>
 
   {% include "product/common.html" %}
